test/libsolidity/syntaxTests/code/usage_as_identifier/usage_as_function_param.sol
contract X {
    function g(string calldata str) external {}

    function foo(string calldata code) external {
        this.g(code);
    }
}
// ----
// ParserError 3548: (95-99): Location already specified.
// ParserError 6933: (127-131): Expected primary expression.
